--- a/stm32_exec.build_log.htm
+++ b/stm32_exec.build_log.htm
@@ -5,7 +5,7 @@
 <h2>Tool Versions:</h2>
 IDE-Version: µVision V5.26.2.0
 Copyright (C) 2018 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: Magnus Gustafsson, student, LIC=----
+License Information: Yashaswini YashSeeta, Student, LIC=----
  
 Tool Versions:
 Toolchain:       MDK-Lite  Version: 5.26.2.0
@@ -21,37 +21,15 @@ Target DLL:      UL2CM3.DLL V1.161.6.0
 Dialog DLL:      TARMSTM.DLL V1.66.0.0
  
 <h2>Project:</h2>
-C:\Users\magnu\stomach93@gmail.com\UU\201810_pes\labs\lab2\elevator-initial\lab_env.uvprojx
-Project File Date:  11/14/2018
+C:\Users\YashSeeta\Documents\Git\elevator\lab_env.uvprojx
+Project File Date:  12/23/2018
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'Target 1'
-assembling STM32F10x.s...
-compiling stm32f10x_lib.c...
-compiling stm32f10x_gpio.c...
-compiling stm32f10x_nvic.c...
-compiling stm32f10x_rcc.c...
-compiling stm32f10x_spi.c...
-compiling stm32f10x_systick.c...
-compiling stm32f10x_usart.c...
-compiling stm32f10x_tim.c...
-assembling cortexm3_macro_rvds.s...
-compiling main.c...
-compiling setup.c...
-compiling position_tracker.c...
-compiling pin_listener.c...
-compiling motor.c...
 compiling planner.c...
-compiling safety.c...
-compiling heap_2.c...
-compiling list.c...
-compiling queue.c...
-compiling tasks.c...
-compiling serial.c...
-compiling port.c...
 linking...
-Program Size: Code=13728 RO-data=304 RW-data=200 ZI-data=18176  
+Program Size: Code=16340 RO-data=304 RW-data=292 ZI-data=18276  
 ".\stm32_exec.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -63,19 +41,19 @@ Package Vendor: ARM
    * Component: CORE Version: 5.1.2
 
 Package Vendor: Keil
-                http://www.keil.com/pack/Keil.STM32F1xx_DFP.2.2.0.pack
-                Keil.STM32F1xx_DFP.2.2.0
+                http://www.keil.com/pack/Keil.STM32F1xx_DFP.2.3.0.pack
+                Keil.STM32F1xx_DFP.2.3.0
                 STMicroelectronics STM32F1 Series Device Support, Drivers and Examples
 
 <h2>Collection of Component include folders:</h2>
   .\RTE\_Target_1
   C:\Keil_v5\ARM\PACK\ARM\CMSIS\5.4.0\CMSIS\Core\Include
-  C:\Keil_v5\ARM\PACK\Keil\STM32F1xx_DFP\2.2.0\Device\Include
+  C:\Keil_v5\ARM\PACK\Keil\STM32F1xx_DFP\2.3.0\Device\Include
 
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:32
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
